2001-02-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (initialize_pager):
	fixed FvwmPagerGeometry option

2001-02-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (initialize_pager):
	(ReConfigure):
	Fixed size calculations of pager
	(initialize_pager):
	fixed desk labels with multibyte

2001-02-12  Mikhael Goikhman  <migo@homemail.com>

	* FvwmScript/Makefile.am: autodetect and prefer bison

2001-02-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (HandlePanelPress):
	Fixed a problem that caused panel state getting out of syc with
	FvwmButtons

	* FvwmPager/x_pager.c (discard_events):
	(DispatchEvent):
	(HandleExpose):
	fixed ConfigureNotify handling

2001-02-10  Mikhael Goikhman  <migo@homemail.com>

	* {FvwmAnimate/FvwmAnimate,FvwmAuto/FvwmAuto}.c:
	* FvwmButtons/{FvwmButtons,button,parse}.c:
	* {FvwmCpp/FvwmCpp,FvwmForm/FvwmForm,FvwmForm/ReadXServer}.c:
	* FvwmGtk/{FvwmGtk,dialog,expand,menu,windowlist}.c:
	* {FvwmIconBox/FvwmIconBox,FvwmM4/FvwmM4}.c:
	* FvwmPager/{FvwmPager,x_pager}.c:
	* FvwmScript/{FvwmScript.c,Instructions.c,scanner.l,script.y}:
	* FvwmWinList/FvwmWinList.c:
	safestrdup and some safe*alloc replacements

	* FvwmScript/{Makefile.am,scanner.c,script.c,script.h}:
	fixed "make syntax" and regenerated syntax

2001-02-07  Dan Espen  <dane@mk.telcordia.com>

	* FvwmBacker/FvwmBacker.1: Add Exec to xpmroot example.

2001-02-03  Mikhael Goikhman  <migo@homemail.com>

	* FvwmScript/Scripts/FvwmScript-Setup95.in:
	changes inspired by the Lorenz Minder's patch

	* FvwmCpp/FvwmCpp.c:
	* FvwmM4/FvwmM4.c:
	buffer overflow and other security fixes

	* FvwmCpp/FvwmCpp.1:
	* FvwmM4/FvwmM4.1:
	typos

2001-01-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIdent/FvwmIdent.c (list_end):
	use standard module signal hangling
	don't gobble all CPU when fvwm dies (bug report #693)

2001-01-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/FvwmPager.c (ParseOptions):
	* FvwmPager/x_pager.c (initialize_pager):