@@ -1,5 +1,8 @@
 2001-02-17  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* FvwmIconMan/x.c (xevent_loop):
+	fixed eternal redrawing under cetrain circumstances
+
 	* FvwmPager/x_pager.c (initialize_pager):
 	fixed FvwmPagerGeometry option
 
